<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context="br.gov.sp.educacao.minhaescola.view.MenuActivity"
    android:background="@color/colorPrimaryDark">



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <LinearLayout
            android:id="@+id/menu_nome_turma"
            android:layout_width="match_parent"
            android:layout_height="85dp"
            android:background="@color/azulSpn"
            android:padding="0dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="20dp"
                android:layout_weight="1"
                android:layout_marginBottom="2dp">

                <TextView
                    android:id="@+id/menu_txt_nome_aluno"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:maxLines="1"
                    android:textSize="22sp"
                    android:textColor="@color/colorWhite"/>

                <TextView
                    android:id="@+id/menu_txt_nome_turma"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textSize="16dp"
                    android:maxLines="2"
                    android:textColor="@color/colorWhite"/>

            </LinearLayout>

            <Button
                android:onClick="onClickMudarAlunoTurma"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:padding="8dp"
                android:layout_marginRight="28dp"
                android:layout_marginLeft="6dp"
                android:layout_gravity="center_vertical"
                android:background="@drawable/ic_change3" />


        </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="85dp"
                android:background="@color/azul_background_minha_escola"
                android:onClick="menuOnClickBtn"
                android:id="@+id/menu_escola">

                <TextView
                    android:id="@+id/menu_txtMinhaEscola"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/item_1"
                    android:textColor="@color/colorWhite"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:textSize="25dp"/>

                <ImageView
                    android:layout_width="65dp"
                    android:layout_height="65dp"
                    android:layout_centerVertical="true"
                    android:layout_alignParentEnd="true"
                    android:src="@drawable/ic_minha_escola"
                    android:layout_marginRight="20dp"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="85dp"
                android:background="@color/azul_background_sobre_mim"
                android:id="@+id/menu_sobre"
                android:onClick="menuOnClickBtn">

                <TextView
                    android:id="@+id/menu_txtSobreMim"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/item_2"
                    android:textColor="@color/colorWhite"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:textSize="25dp"/>

                <ImageView
                    android:layout_width="65dp"
                    android:layout_height="65dp"
                    android:layout_centerVertical="true"
                    android:layout_alignParentEnd="true"
                    android:src="@drawable/ic_sobre_mim"
                    android:layout_marginRight="20dp"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="85dp"
                android:background="@color/azul_horario_aula"
                android:id="@+id/menu_horario"
                android:onClick="menuOnClickBtn">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="horário de aula"
                    android:textColor="@color/colorWhite"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:textSize="25dp"/>

                <ImageView
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:layout_centerVertical="true"
                    android:layout_alignParentEnd="true"
                    android:src="@drawable/ic_horario"
                    android:layout_marginRight="25dp"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="85dp"
                android:background="@color/azul_minhas_notas"
                android:id="@+id/menu_minhas_notas"
                android:onClick="menuOnClickBtn">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/item_4"
                    android:textColor="@color/colorWhite"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:textSize="25dp"/>

                <ImageView
                    android:layout_width="65dp"
                    android:layout_height="65dp"
                    android:layout_centerVertical="true"
                    android:layout_alignParentEnd="true"
                    android:src="@drawable/ic_notas"
                    android:layout_marginRight="20dp"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="85dp"
                android:background="@color/azul_frequencia"
                android:id="@+id/menu_frequencia"
                android:onClick="menuOnClickBtn"
                android:visibility="visible">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/item_5"
                    android:textColor="@color/colorWhite"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:textSize="25dp"/>

                <ImageView
                    android:layout_width="65dp"
                    android:layout_height="65dp"
                    android:layout_centerVertical="true"
                    android:layout_alignParentEnd="true"
                    android:src="@drawable/ic_frequencia"
                    android:layout_marginRight="20dp"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="85dp"
                android:background="@color/azul_calendario"
                android:id="@+id/menu_calendario"
                android:onClick="menuOnClickBtn">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/item_6"
                    android:textColor="@color/colorWhite"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:textSize="25dp"/>

                <ImageView
                    android:layout_width="65dp"
                    android:layout_height="65dp"
                    android:layout_centerVertical="true"
                    android:layout_alignParentEnd="true"
                    android:src="@drawable/ic_calendario"
                    android:layout_marginRight="20dp"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="85dp"
                android:background="@color/azul_background_alimentacao_mensagem"
                android:id="@+id/menu_alimentacao"
                android:onClick="menuOnClickBtn">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="alimentação"
                    android:textColor="@color/colorWhite"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:textSize="25dp"/>

                <ImageView
                    android:layout_width="65dp"
                    android:layout_height="65dp"
                    android:layout_centerVertical="true"
                    android:layout_alignParentEnd="true"
                    android:src="@drawable/ic_alimentacao"
                    android:layout_marginRight="20dp"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="85dp"
                android:background="@color/azul_carteirinha"
                android:id="@+id/menu_carteirinha"
                android:onClick="menuOnClickBtn">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/item_8"
                    android:textColor="@color/colorWhite"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:textSize="25dp"/>

                <ImageView
                    android:layout_width="65dp"
                    android:layout_height="65dp"
                    android:layout_centerVertical="true"
                    android:layout_alignParentEnd="true"
                    android:src="@drawable/ic_carteirinha"
                    android:layout_marginRight="20dp"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="85dp"
                android:background="@color/azul_mensagem"
                android:id="@+id/menu_mensagens"
                android:onClick="menuOnClickBtn"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/item_9"
                    android:textColor="@color/colorWhite"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:textSize="25dp"/>

                <ImageView
                    android:layout_width="65dp"
                    android:layout_height="65dp"
                    android:layout_centerVertical="true"
                    android:layout_alignParentEnd="true"
                    android:src="@drawable/ic_mensagens"
                    android:layout_marginRight="20dp"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="85dp"
                android:background="@color/azul_boletim"
                android:id="@+id/menu_boletim"
                android:onClick="menuOnClickBtn">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/item_10"
                    android:textColor="@color/colorWhite"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:textSize="25dp"/>

                <ImageView
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:layout_centerVertical="true"
                    android:layout_alignParentEnd="true"
                    android:src="@drawable/ic_boletim"
                    android:layout_marginRight="25dp"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="85dp"
                android:background="@color/azul_compartilhar"
                android:id="@+id/menu_compartilhar"
                android:onClick="menuOnClickBtn"
                android:visibility="visible">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/item_12"
                    android:textColor="@color/colorWhite"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:textSize="25dp"/>

                <ImageView
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:layout_centerVertical="true"
                    android:layout_alignParentEnd="true"
                    android:src="@drawable/ic_share"
                    android:layout_marginRight="25dp"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="85dp"
                android:background="@color/azul_sair"
                android:id="@+id/menu_sair"
                android:onClick="menuOnClickBtn">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/item_11"
                    android:textColor="@color/colorWhite"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:textSize="25dp"/>

                <ImageView
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:layout_centerVertical="true"
                    android:layout_alignParentEnd="true"
                    android:src="@drawable/ic_sair"
                    android:layout_marginRight="25dp"/>
            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

    <RelativeLayout
        android:id="@+id/menu_relative_sombra"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:background="@color/sombra2"
        android:visibility="gone"
        android:gravity="center">

        <ProgressBar
            android:layout_width="65dp"
            android:layout_height="65dp" />

    </RelativeLayout>

</RelativeLayout>
