<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/azul_background_alimentacao_mensagem"
    android:orientation="vertical"
    tools:context=".view.new_alimentacao.AvaliacaoQuestao2Activity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/avaliacao_q2_voltar"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_margin="12dp"
                    android:padding="5dp"
                    android:src="@drawable/ic_back" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="avaliar"
                    android:textAlignment="center"
                    android:textColor="@color/colorWhite"
                    android:textSize="25dp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_margin="35dp"
                    android:text="@string/alimentacao_questao_1"
                    android:textAlignment="center"
                    android:textColor="@color/colorWhite"
                    android:textSize="25dp"
                    android:textStyle="bold" />

            </RelativeLayout>

            <LinearLayout
                android:id="@+id/avaliacao_q2_opc1"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/shape_retangulo_alimentacao"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_margin="7dp"
                    android:src="@drawable/questao_1_opcao_1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="14dp"
                    android:text="@string/alimentacao_questao_1_opcao_1"
                    android:textAlignment="center"
                    android:textColor="@color/colorWhite"
                    android:textSize="22dp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/avaliacao_q2_opc2"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/shape_retangulo_alimentacao"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_margin="5dp"
                    android:src="@drawable/questao_1_opcao_2" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="14dp"
                    android:text="@string/alimentacao_questao_1_opcao_2"
                    android:textAlignment="center"
                    android:textColor="@color/colorWhite"
                    android:textSize="22sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/avaliacao_q2_opc3"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/shape_retangulo_alimentacao"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_margin="5dp"
                    android:src="@drawable/questao_1_opcao_3" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="14dp"
                    android:text="@string/alimentacao_questao_1_opcao_3"
                    android:textAlignment="center"
                    android:textColor="@color/colorWhite"
                    android:textSize="22sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/avaliacao_q2_opc4"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/shape_retangulo_alimentacao"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_margin="5dp"
                    android:src="@drawable/questao_1_opcao_4" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="14dp"
                    android:text="@string/alimentacao_questao_1_opcao_4"
                    android:textAlignment="center"
                    android:textColor="@color/colorWhite"
                    android:textSize="22sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/avaliacao_q2_opc5"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/shape_retangulo_alimentacao"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_margin="5dp"
                    android:src="@drawable/aval_nao_servido" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="14dp"
                    android:text="Não foi servido"
                    android:textAlignment="center"
                    android:textColor="@color/colorWhite"
                    android:textSize="22sp" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
